applications/helm-charts/wordpress/wordpress-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: monitoring 
  labels:
    app: wordpress
spec:
  ports:
  - port: 80
    name: wordpress
    targetPort: 80
  type: ClusterIP
  selector:
    app: wordpress
