applications/helm-charts/wordpress/wordpress-manifests/statefullset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: monitoring 
  labels:
    app: mysql
spec:
  ports:
  - port: 3306
    name: db
  type: ClusterIP
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql # has to match .spec.template.metadata.labels
  serviceName: "mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: aimvector/mysql-example
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: db
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: db
    spec:
      # accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp2"
      resources:
        requests:
          storage: 500Mi
